--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -7,12 +7,16 @@ body{
   margin:0;
   width:100%;
   height:100%;
-  background:#5DB1BB;;
-  text-align:center;
+  background:whitesmoke;
 }
 .space{
   display: inline-block;
-  width:80%;
+  width:100%;
+  height:100%;
+  background:url('../images/background-me.jpg');
+  background-size:auto 100%;
+  background-repeat:no-repeat;
+  background-position: 100%;
   color:white;
   font-size:18px;
   font-weight:bold;
@@ -20,4 +24,35 @@ body{
 }
 .space a{
   color:white;//#001A2B;
+  
+}
+.profession{
+  color:grey;
+  position:absolute;
+  top:12%;
+  left:5%;
+  font-size:14px;
+}
+.profession .designation{
+  display: inline-block;
+  font-size:30px;
+}
+.name{
+  color:black;
+  position: absolute;
+  bottom: 10%;
+  left:5%;
+}
+.name a{
+  color:grey;
+  text-decoration:none;
+}
+.name a:hover{
+  text-decoration: underline;
+}
+.name .contact{
+  display: none;
+  color:grey;
+  font-size: 14px;
+  line-height: 25px;
 }
