--- a/v1/css/style.css
+++ b/v1/css/style.css
@@ -7,7 +7,7 @@ body{
   margin:0;
   width:100%;
   height:100%;
-  background:whitesmoke;
+  background:white;//smoke;
 }
 .space{
   display: inline-block;
@@ -29,7 +29,7 @@ body{
 .profession{
   color:grey;
   position:absolute;
-  top:12%;
+  top:5%;
   left:5%;
   font-size:14px;
 }
@@ -40,7 +40,7 @@ body{
 .name{
   color:black;
   position: absolute;
-  bottom: 10%;
+  bottom: 5%;
   left:5%;
 }
 .name a{
@@ -55,4 +55,11 @@ body{
   color:grey;
   font-size: 14px;
   line-height: 25px;
+}
+.tweets{
+  position: absolute;
+  width:25%;
+  height:50%;
+  top:20%;
+  left:1%;
 }
